Fixed Alignment th the Order Received part on the Cart page

--- a/sass/plugins/woocommerce/_checkout.scss
+++ b/sass/plugins/woocommerce/_checkout.scss
@@ -98,6 +98,10 @@
     margin-top: 3rem;
   }
 
+  .woocommerce-table--order-details {
+    max-width: 35rem;
+  }
+
   .woocommerce-customer-details {
     margin-top: 3rem;
   }
